--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -42,15 +42,22 @@
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/_24sdp">
 
-                        <ImageView
-                            android:id="@+id/iv_user_icon"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:contentDescription="@string/user_details"
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="@dimen/_48sdp"
+                            android:layout_height="@dimen/_48sdp"
                             android:padding="2dp"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/acct_profile"
-                            android:visibility="visible" />
+                            app:cardBackgroundColor="@color/white"
+                            app:cardCornerRadius="@dimen/_24sdp">
+
+                            <ImageView
+                                android:id="@+id/iv_user_icon"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:contentDescription="@string/user_details"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/acct_profile"
+                                android:visibility="visible" />
+                        </androidx.cardview.widget.CardView>
 
                         <TextView
                             android:id="@+id/tv_user_icon_text"
