--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <LinearLayout
@@ -73,7 +73,7 @@
         android:textColor="@color/black"
         android:textSize="@dimen/_16ssp" />
 
-    <com.greenbox.coyni.intro_slider.AutoScrollViewPager
+    <com.greenbox.coyni.intro_slider.OneDirectionViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -174,10 +174,11 @@
                         android:id="@+id/companyemailET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:inputType="text|textNoSuggestions"
-                        android:maxLength="30"
+                        android:maxLength="255"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -287,7 +288,6 @@
                             android:focusable="false"
                             android:fontFamily="@font/opensans_semibold"
                             android:longClickable="false"
-                            android:maxLength="30"
                             android:maxLines="1"
                             android:paddingRight="@dimen/_14sdp"
                             android:textColor="@color/text_color"
@@ -335,14 +335,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_14sdp"
-                    android:visibility="gone"
-                    android:clickable="false">
+                    android:clickable="false"
+                    android:visibility="gone">
 
                     <ImageButton
                         android:id="@+id/timezoneButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@color/white"
+                        android:clickable="false"
                         android:src="@drawable/ic_down"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="@+id/timezoneTIL"
@@ -351,27 +352,27 @@
                         app:layout_constraintTop_toTopOf="@+id/timezoneTIL"
                         app:layout_constraintVertical_bias="0.507"
                         app:layout_editor_absoluteX="336.24dp"
-                        app:layout_editor_absoluteY="26.28dp"
-                        android:clickable="false"/>
+                        app:layout_editor_absoluteY="26.28dp" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/timezoneTIL"
                         style="@style/TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:clickable="false"
                         android:hint="Time Zone(Optional)"
                         android:textColorHint="@color/black"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
                         app:expandedHintEnabled="false"
                         app:hintTextColor="@color/primary_green"
-                        tools:ignore="MissingConstraints"
-                        android:clickable="false">
+                        tools:ignore="MissingConstraints">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/timeZoneET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:clickable="false"
                             android:cursorVisible="false"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:editable="false"
@@ -389,8 +390,7 @@
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
                             android:textIsSelectable="false"
-                            android:textSize="@dimen/_12ssp"
-                            android:clickable="false"/>
+                            android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -404,7 +404,7 @@
                     android:text="By selecting this we will clear your batch based on\nyour time zone at 11:59:59pm."
                     android:textColor="@color/dark_grey"
                     android:textSize="@dimen/_10ssp"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/basicNextCV"
@@ -427,11 +427,11 @@
 
                 </androidx.cardview.widget.CardView>
 
-<!--                <View-->
-<!--                    android:id="@+id/pageOneView"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="@dimen/_200sdp"-->
-<!--                    android:visibility="gone"/>-->
+                <!--                <View-->
+                <!--                    android:id="@+id/pageOneView"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="@dimen/_200sdp"-->
+                <!--                    android:visibility="gone"/>-->
             </LinearLayout>
 
         </ScrollView>
@@ -475,11 +475,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:autofillHints="creditCardSecurityCode"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:inputType="text|textNoSuggestions"
-                        android:maxLength="30"
+                        android:maxLength="100"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -534,11 +534,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:autofillHints="creditCardSecurityCode"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:inputType="text|textNoSuggestions"
-                        android:maxLength="30"
+                        android:maxLength="100"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -598,7 +598,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:inputType="text|textNoSuggestions"
-                        android:maxLength="30"
+                        android:maxLength="50"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -849,11 +849,11 @@
                         android:textSize="@dimen/_12ssp" />
                 </androidx.cardview.widget.CardView>
 
-<!--                <View-->
-<!--                    android:id="@+id/pageTwoView"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="@dimen/_200sdp"-->
-<!--                    android:visibility="gone"/>-->
+                <!--                <View-->
+                <!--                    android:id="@+id/pageTwoView"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="@dimen/_200sdp"-->
+                <!--                    android:visibility="gone"/>-->
             </LinearLayout>
 
         </ScrollView>
@@ -888,10 +888,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_14sdp"
                     android:background="@drawable/bg_white_color_light_border"
+                    android:onClick="aoiClick"
                     android:paddingLeft="@dimen/_8sdp"
                     android:paddingTop="@dimen/_13sdp"
-                    android:paddingBottom="@dimen/_14sdp"
-                    android:onClick="aoiClick">
+                    android:paddingBottom="@dimen/_14sdp">
 
 
                     <ImageView
@@ -965,10 +965,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_14sdp"
                     android:background="@drawable/bg_white_color_light_border"
+                    android:onClick="einLetterClick"
                     android:paddingLeft="@dimen/_8sdp"
                     android:paddingTop="@dimen/_13sdp"
-                    android:paddingBottom="@dimen/_14sdp"
-                    android:onClick="einLetterClick">
+                    android:paddingBottom="@dimen/_14sdp">
 
 
                     <ImageView
@@ -1040,10 +1040,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_14sdp"
                     android:background="@drawable/bg_white_color_light_border"
+                    android:onClick="w9FormClick"
                     android:paddingLeft="@dimen/_8sdp"
                     android:paddingTop="@dimen/_13sdp"
-                    android:paddingBottom="@dimen/_14sdp"
-                    android:onClick="w9FormClick">
+                    android:paddingBottom="@dimen/_14sdp">
 
 
                     <ImageView
@@ -1136,6 +1136,6 @@
 
         </RelativeLayout>
 
-    </com.greenbox.coyni.intro_slider.AutoScrollViewPager>
+    </com.greenbox.coyni.intro_slider.OneDirectionViewPager>
 
 </LinearLayout>
