--- a/app/src/main/res/layout/activity_ssnoutline_box_number_edit_text.xml
+++ b/app/src/main/res/layout/activity_ssnoutline_box_number_edit_text.xml
@@ -40,7 +40,7 @@
                 android:background="@color/light_gray" />
         </LinearLayout>
 
-        <com.greenbox.coyni.utils.MaskEditText.widget.MaskEditText
+        <EditText
             android:id="@+id/ssnET"
             android:layout_width="match_parent"
             android:layout_height="55dp"
@@ -49,15 +49,16 @@
             android:digits="0123456789"
             android:fontFamily="@font/opensans_semibold"
             android:hint="•••-•••-••••"
-            android:imeOptions="actionNext"
-            android:inputType="numberPassword|textNoSuggestions"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
             android:maxLines="1"
             android:padding="14dp"
+            android:maxLength="9"
             android:singleLine="true"
             android:textColor="@color/primary_black"
             android:textColorHint="@color/light_gray"
             android:textCursorDrawable="@drawable/cursor_color"
             android:textSize="@dimen/_12ssp"
-            app:mask="__-_______" />
+            app:mask="_________" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
