--- a/app/src/main/res/layout/activity_website.xml
+++ b/app/src/main/res/layout/activity_website.xml
@@ -50,6 +50,7 @@
             android:imeOptions="actionNext"
             android:inputType="textEmailAddress"
             android:maxLines="1"
+            android:maxLength="100"
             android:padding="14dp"
             android:singleLine="true"
             android:textColor="@color/primary_black"
