--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/backgrndbtmcornrs"
-        android:paddingLeft="@dimen/_21sdp"
+        android:paddingStart="@dimen/_21sdp"
         android:paddingTop="@dimen/_20sdp"
         android:paddingBottom="@dimen/_12sdp">
 
@@ -33,7 +33,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_chevron_left" />
+                    android:src="@drawable/ic_chevron_left"
+                    android:contentDescription="@string/back_button"/>
             </LinearLayout>
 
             <TextView
@@ -43,9 +44,9 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:fontFamily="@font/opensans_semibold"
-                android:text="Visa Debit ••••8765"
+                android:text="@string/visa_debit_8765"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp"></TextView>
+                android:textSize="@dimen/_11ssp"/>
         </RelativeLayout>
 
     </RelativeLayout>
@@ -84,7 +85,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:hint="Name on Card"
+                        android:hint="@string/name_on_card"
                         android:textColorHint="@color/primary_black"
                         app:boxCornerRadiusBottomEnd="12dp"
                         app:boxCornerRadiusBottomStart="12dp"
@@ -135,7 +136,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:hint="Card Exp"
+                        android:hint="@string/card_exp"
                         android:textColorHint="@color/primary_black"
                         app:boxCornerRadiusBottomEnd="12dp"
                         app:boxCornerRadiusBottomStart="12dp"
@@ -169,8 +170,7 @@
                         android:id="@+id/expiryErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/etlCard"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center"
                         android:orientation="horizontal"
@@ -179,7 +179,8 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_erro" />
+                            android:src="@drawable/ic_erro"
+                            android:contentDescription="@string/error_code"/>
 
                         <TextView
                             android:id="@+id/expiryErrorTV"
@@ -195,7 +196,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:background="@color/viewcolor"></View>
+                        android:background="@color/viewcolor"/>
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/etlAddress1"
@@ -203,7 +204,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:hint="Billing Address Line 1"
+                        android:hint="@string/billing_address_line_1"
                         android:textColorHint="@color/primary_black"
                         app:boxCornerRadiusBottomEnd="12dp"
                         app:boxCornerRadiusBottomStart="12dp"
@@ -228,6 +229,7 @@
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
                             android:textColorHint="@color/light_gray"
+                            android:textCursorDrawable="@drawable/cursor_color"
                             android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -236,8 +238,7 @@
                         android:id="@+id/address1ErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/etlName"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center"
                         android:orientation="horizontal"
@@ -246,7 +247,8 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_erro" />
+                            android:src="@drawable/ic_erro"
+                            android:contentDescription="@string/error_code"/>
 
                         <TextView
                             android:id="@+id/address1ErrorTV"
@@ -264,7 +266,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:hint="Billing Address Line 2(Optional)"
+                        android:hint="@string/billing_address_line_2_optional"
                         android:textColorHint="@color/primary_black"
                         app:boxCornerRadiusBottomEnd="12dp"
                         app:boxCornerRadiusBottomStart="12dp"
@@ -288,6 +290,7 @@
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
+                            android:textCursorDrawable="@drawable/cursor_color"
                             android:textColorHint="@color/light_gray"
                             android:textSize="@dimen/_12ssp" />
 
@@ -299,7 +302,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:hint="City"
+                        android:hint="@string/city"
                         android:textColorHint="@color/primary_black"
                         app:boxCornerRadiusBottomEnd="12dp"
                         app:boxCornerRadiusBottomStart="12dp"
@@ -323,7 +326,8 @@
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
                             android:textColorHint="@color/light_gray"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="@dimen/_12ssp"
+                            android:textCursorDrawable="@drawable/cursor_color"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -331,8 +335,7 @@
                         android:id="@+id/cityErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/etlName"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center"
                         android:orientation="horizontal"
@@ -341,7 +344,8 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_erro" />
+                            android:src="@drawable/ic_erro"
+                            android:contentDescription="@string/field_required"/>
 
                         <TextView
                             android:id="@+id/cityErrorTV"
@@ -372,7 +376,8 @@
                             app:layout_constraintTop_toTopOf="@+id/etlState"
                             app:layout_constraintVertical_bias="0.507"
                             app:layout_editor_absoluteX="336.24dp"
-                            app:layout_editor_absoluteY="26.28dp" />
+                            app:layout_editor_absoluteY="26.28dp"
+                            android:contentDescription="@string/giftcard"/>
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/etlState"
@@ -380,7 +385,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_14sdp"
-                            android:hint="State"
+                            android:hint="@string/state"
                             android:textColorHint="@color/black"
                             app:boxStrokeColor="@color/primary_green"
                             app:errorIconDrawable="@null"
@@ -398,7 +403,7 @@
                                 android:editable="false"
                                 android:focusable="false"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:hint="State"
+                                android:hint="@string/state"
                                 android:imeOptions="actionNext"
                                 android:inputType="text|textNoSuggestions"
                                 android:longClickable="false"
@@ -420,8 +425,7 @@
                         android:id="@+id/stateErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/etlName"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center"
                         android:orientation="horizontal"
@@ -430,7 +434,8 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_erro" />
+                            android:src="@drawable/ic_erro"
+                            android:contentDescription="@string/field_required"/>
 
                         <TextView
                             android:id="@+id/stateErrorTV"
@@ -448,7 +453,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_20sdp"
-                        android:hint="Zip Code"
+                        android:hint="@string/zip_code"
                         android:textColorHint="@color/primary_black"
                         app:boxCornerRadiusBottomEnd="12dp"
                         app:boxCornerRadiusBottomStart="12dp"
@@ -472,6 +477,7 @@
                             android:singleLine="true"
                             android:textColor="@color/primary_black"
                             android:textColorHint="@color/light_gray"
+                            android:textCursorDrawable="@drawable/cursor_color"
                             android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -480,8 +486,7 @@
                         android:id="@+id/zipErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/etlName"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center"
                         android:orientation="horizontal"
@@ -490,7 +495,8 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
-                            android:src="@drawable/ic_erro" />
+                            android:src="@drawable/ic_erro"
+                            android:contentDescription="@string/field_required"/>
 
                         <TextView
                             android:id="@+id/zipErrorTV"
@@ -519,7 +525,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:enabled="false"
-                            android:hint="Country"
+                            android:hint="@string/country"
                             android:textColorHint="@color/xdark_gray"
                             app:boxStrokeColor="@color/primary_green"
                             app:errorIconDrawable="@null"
@@ -540,7 +546,7 @@
                                 android:padding="@dimen/_14sdp"
                                 android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                                 android:singleLine="true"
-                                android:text="United States"
+                                android:text="@string/united_states"
                                 android:textColor="@color/xdark_gray"
                                 android:textColorHint="@color/light_gray"
                                 android:textCursorDrawable="@drawable/cursor_color"
@@ -567,9 +573,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="Save"
+                    android:text="@string/save"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp"></TextView>
+                    android:textSize="@dimen/_12ssp"/>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -588,9 +594,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/opensans_semibold"
-                    android:text="Remove This Card"
+                    android:text="@string/remove_this_card"
                     android:textColor="@color/error_red"
-                    android:textSize="@dimen/_12ssp"></TextView>
+                    android:textSize="@dimen/_12ssp"/>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
