--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -121,7 +121,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:inputType="text|textNoSuggestions"
-                        android:maxLength="30"
+                        android:maxLength="255"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -738,7 +738,7 @@
                         android:layout_height="wrap_content"
                         android:autofillHints="creditCardSecurityCode"
                         android:fontFamily="@font/opensans_semibold"
-                        android:imeOptions="actionNext"
+                        android:imeOptions="actionDone"
                         android:inputType="number"
                         android:maxLength="5"
                         android:maxLines="1"
