--- a/app/src/main/res/layout/activity_getstarted_success.xml
+++ b/app/src/main/res/layout/activity_getstarted_success.xml
@@ -23,6 +23,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/_42sdp"
             android:layout_marginBottom="@dimen/_21sdp"
