--- a/app/src/main/res/layout/activity_enable_auth_id.xml
+++ b/app/src/main/res/layout/activity_enable_auth_id.xml
@@ -118,7 +118,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/_20sdp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -403,7 +403,8 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:layout_marginLeft="@dimen/_21sdp"
-        android:layout_marginRight="@dimen/_21sdp">
+        android:layout_marginRight="@dimen/_21sdp"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
